buildscript {
    ext {
        springBootVersion = '2.0.0.M7'
    }

    repositories {
        maven {
            url 'https://repo.spring.io/libs-milestone'
        }
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

compileJava {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    options.fork = true
    options.forkOptions.executable = 'javac'

    options.encoding = "UTF-8"
//    options.compilerArgs += [
//        "--add-modules", "java.xml.ws.annotations"
//    ]
}

repositories {
    maven {
        url 'https://repo.spring.io/libs-milestone'
    }
    mavenCentral()
}

dependencies {
    // springboot
//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
//    compile('org.springframework.boot:spring-boot-starter-security')
//    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
    compile('org.springframework.boot:spring-boot-starter-web')

    // database
//    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'

//    testCompile('org.springframework.boot:spring-boot-starter-test')
//    testCompile('org.springframework.security:spring-security-test')
}

task wrapper (type: Wrapper){
    gradleVersion = '4.4'
}
